refactor: SlackMessage vo 관련 로직 재구성